name:                todo
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     TODO
  -- other-modules:       
  other-extensions:    GADTs, TypeOperators, DataKinds
  build-depends:       base >=4.7 && <4.8
  -- hs-source-dirs:      
  default-language:    Haskell2010